--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
 
 </head>
 <body>
-    <h1>Top 10 richest people</h1>
-    <p>Drag and drop the items into their corresponding spots</p>
+    <h1>Top 10 populated countries</h1>
+    <p>Drag and drop the countries into their corresponding spots</p>
     <ul class="draggable-list" id="draggable-list"></ul>
     <button class="check-btn" id="check">
         Check order
